feat: Implement a new SPI (Shared code base for all drivers)
      o	Implement new Read-/WriteBuffers that work without third party dependencies
      o	Implement an updated code-generation framework
      o	Implement a new system for pluggable transports
      o	Implement the code for the concept of layered protocol drivers
      -	Update existing drivers to the new SPI