@@ -18,26 +18,20 @@
  */
 package org.apache.plc4x.java.bacnetip;
 
-import io.netty.buffer.ByteBuf;
-import org.apache.plc4x.java.spi.configuration.PlcConnectionConfiguration;
-import org.apache.plc4x.java.spi.configuration.PlcTransportConfiguration;
 import org.apache.plc4x.java.bacnetip.configuration.BacNetIpConfiguration;
-import org.apache.plc4x.java.bacnetip.configuration.BacNetPcapReplayTransportConfiguration;
-import org.apache.plc4x.java.bacnetip.configuration.BacNetRawSocketTransportConfiguration;
 import org.apache.plc4x.java.bacnetip.configuration.BacNetUdpTransportConfiguration;
-import org.apache.plc4x.java.bacnetip.protocol.BacNetIpProtocolLogic;
-import org.apache.plc4x.java.bacnetip.readwrite.BVLC;
-import org.apache.plc4x.java.spi.connection.GeneratedDriverBase;
-import org.apache.plc4x.java.spi.connection.ProtocolStackConfigurer;
-import org.apache.plc4x.java.spi.connection.SingleProtocolStackConfigurer;
+import org.apache.plc4x.java.spi.config.Configuration;
+import org.apache.plc4x.java.spi.drivers.ConnectionBase;
+import org.apache.plc4x.java.spi.drivers.DriverBase;
+import org.apache.plc4x.java.spi.transports.api.Transport;
+import org.apache.plc4x.java.spi.transports.api.TransportInstance;
+import org.apache.plc4x.java.spi.transports.api.config.TransportConfiguration;
+import org.apache.plc4x.java.utils.auditlog.api.AuditLog;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.function.Consumer;
-import java.util.function.ToIntFunction;
 
-public class BacNetIpDriver extends GeneratedDriverBase<BVLC> {
+public class BacNetIpDriver extends DriverBase {
 
     @Override
     public String getProtocolCode() {
@@ -50,41 +44,26 @@ public class BacNetIpDriver extends GeneratedDriverBase<BVLC> {
     }
 
     @Override
-    protected Class<? extends PlcConnectionConfiguration> getConfigurationClass() {
+    protected Class<? extends Configuration> getConfigurationClass() {
         return BacNetIpConfiguration.class;
     }
 
     @Override
-    protected Optional<Class<? extends PlcTransportConfiguration>> getTransportConfigurationClass(String transportCode) {
-        switch (transportCode) {
-            case "udp":
-                return Optional.of(BacNetUdpTransportConfiguration.class);
-            case "raw":
-                return Optional.of(BacNetRawSocketTransportConfiguration.class);
-            case "pcap":
-                return Optional.of(BacNetPcapReplayTransportConfiguration.class);
+    protected Class<? extends TransportConfiguration> getTransportConfigurationClass(Transport<?> transport) {
+        if ("udp".equals(transport.getTransportCode())) {
+            return BacNetUdpTransportConfiguration.class;
         }
-        return Optional.empty();
+        return super.getTransportConfigurationClass(transport);
     }
 
     @Override
-    protected Optional<String> getDefaultTransportCode() {
+    public Optional<String> getDefaultTransportCode() {
         return Optional.of("udp");
     }
 
     @Override
-    protected List<String> getSupportedTransportCodes() {
-        return Arrays.asList("udp", "tcp", "pcap");
-    }
-
-    @Override
-    protected boolean canRead() {
-        return false;
-    }
-
-    @Override
-    protected boolean canWrite() {
-        return false;
+    public List<String> getSupportedTransportCodes() {
+        return List.of("udp", "test");
     }
 
     @Override
@@ -93,34 +72,10 @@ public class BacNetIpDriver extends GeneratedDriverBase<BVLC> {
     }
 
     @Override
-    protected ProtocolStackConfigurer<BVLC> getStackConfigurer() {
-        return SingleProtocolStackConfigurer.builder(BVLC.class, BVLC::staticParse)
-            .withProtocol(BacNetIpProtocolLogic.class)
-            .withPacketSizeEstimator(ByteLengthEstimator.class)
-            .withCorruptPacketRemover(CorruptPackageCleaner.class)
-            .build();
-    }
-
-    /** Estimate the Length of a Packet */
-    public static class ByteLengthEstimator implements ToIntFunction<ByteBuf> {
-        @Override
-        public int applyAsInt(ByteBuf byteBuf) {
-            if (byteBuf.readableBytes() >= 4) {
-                return byteBuf.getUnsignedShort(byteBuf.readerIndex() + 2);
-            }
-            return -1;
-        }
-    }
-
-    /** Consumes all Bytes till another Magic Byte is found */
-    public static class CorruptPackageCleaner implements Consumer<ByteBuf> {
-        @Override
-        public void accept(ByteBuf byteBuf) {
-            while (byteBuf.getUnsignedByte(0) != BVLC.BACNETTYPE) {
-                // Just consume the bytes till the next possible start position.
-                byteBuf.readByte();
-            }
-        }
+    protected ConnectionBase<?> getConnection(Configuration configuration,
+                                              TransportInstance<?> transportInstance,
+                                              AuditLog auditLog) {
+        return new BacNetIpConnection((BacNetIpConfiguration) configuration, transportInstance, auditLog);
     }
 
 }
