@@ -18,42 +18,29 @@
  */
 package org.apache.plc4x.java.eip.base;
 
-import io.netty.buffer.ByteBuf;
-import org.apache.plc4x.java.api.PlcConnection;
 import org.apache.plc4x.java.api.messages.PlcDiscoveryRequest;
-import org.apache.plc4x.java.eip.base.discovery.EipPlcDiscoverer;
-import org.apache.plc4x.java.spi.configuration.PlcConnectionConfiguration;
-import org.apache.plc4x.java.spi.configuration.PlcTransportConfiguration;
-import org.apache.plc4x.java.api.exceptions.PlcConnectionException;
 import org.apache.plc4x.java.eip.base.configuration.EIPConfiguration;
 import org.apache.plc4x.java.eip.base.configuration.EipTcpTransportConfiguration;
+import org.apache.plc4x.java.eip.base.discovery.EipPlcDiscoverer;
 import org.apache.plc4x.java.eip.base.tag.EipTag;
-import org.apache.plc4x.java.eip.base.protocol.EipProtocolLogic;
-import org.apache.plc4x.java.eip.readwrite.EipPacket;
-import org.apache.plc4x.java.spi.configuration.ConfigurationFactory;
-import org.apache.plc4x.java.spi.configuration.HasConfiguration;
-import org.apache.plc4x.java.spi.connection.*;
-import org.apache.plc4x.java.spi.generation.ByteOrder;
-import org.apache.plc4x.java.spi.messages.DefaultPlcDiscoveryRequest;
-import org.apache.plc4x.java.spi.transport.Transport;
+import org.apache.plc4x.java.eip.readwrite.Constants;
+import org.apache.plc4x.java.spi.config.Configuration;
+import org.apache.plc4x.java.spi.drivers.ConnectionBase;
+import org.apache.plc4x.java.spi.drivers.DriverBase;
+import org.apache.plc4x.java.spi.drivers.messages.DefaultPlcDiscoveryRequest;
+import org.apache.plc4x.java.spi.transports.api.Transport;
+import org.apache.plc4x.java.spi.transports.api.TransportInstance;
+import org.apache.plc4x.java.spi.transports.api.config.TransportConfiguration;
+import org.apache.plc4x.java.utils.auditlog.api.AuditLog;
 
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.ServiceLoader;
-import java.util.function.Consumer;
-import java.util.function.ToIntFunction;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
+import java.util.Set;
 
-import static org.apache.plc4x.java.spi.configuration.ConfigurationFactory.configure;
+public class EIPDriver extends DriverBase {
 
-public class EIPDriver extends GeneratedDriverBase<EipPacket> {
-    public static final int PORT = 44818;
-    private static final Pattern URI_PATTERN = Pattern.compile(
-        "^(?<protocolCode>[a-z0-9\\-]*)(:(?<transportCode>[a-z0-9]*))?://(?<transportConfig>[^?]*)(\\?(?<paramString>.*))?");
-
-    private EIPConfiguration configuration;
+    public static final int PORT = Constants.EIPTCPDEFAULTPORT;
 
     @Override
     public String getProtocolCode() {
@@ -66,27 +53,34 @@ public class EIPDriver extends GeneratedDriverBase<EipPacket> {
     }
 
     @Override
-    protected Class<? extends PlcConnectionConfiguration> getConfigurationClass() {
+    protected Class<? extends Configuration> getConfigurationClass() {
         return EIPConfiguration.class;
     }
 
     @Override
-    protected Optional<Class<? extends PlcTransportConfiguration>> getTransportConfigurationClass(String transportCode) {
-        switch (transportCode) {
-            case "tcp":
-                return Optional.of(EipTcpTransportConfiguration.class);
+    protected Class<? extends TransportConfiguration> getTransportConfigurationClass(Transport<?> transport) {
+        if ("tcp".equals(transport.getTransportCode())) {
+            return EipTcpTransportConfiguration.class;
         }
-        return Optional.empty();
+        return super.getTransportConfigurationClass(transport);
     }
 
     @Override
-    protected Optional<String> getDefaultTransportCode() {
+    public Optional<String> getDefaultTransportCode() {
         return Optional.of("tcp");
     }
 
     @Override
-    protected List<String> getSupportedTransportCodes() {
-        return Collections.singletonList("tcp");
+    public List<String> getSupportedTransportCodes() {
+        return List.of("tcp", "test");
+    }
+
+    @Override
+    public Set<Integer> defaultPorts(String transportCode) {
+        if ("tcp".equalsIgnoreCase(transportCode)) {
+            return Set.of(Constants.EIPTCPDEFAULTPORT);
+        }
+        return Collections.emptySet();
     }
 
     @Override
@@ -94,12 +88,8 @@ public class EIPDriver extends GeneratedDriverBase<EipPacket> {
         return new DefaultPlcDiscoveryRequest.Builder(new EipPlcDiscoverer());
     }
 
-    /**
-     * This protocol doesn't have a disconnect procedure, so there is no need to wait for a login to finish.
-     * @return false
-     */
     @Override
-    protected boolean awaitDisconnectComplete() {
+    protected boolean canDiscover() {
         return true;
     }
 
@@ -114,150 +104,13 @@ public class EIPDriver extends GeneratedDriverBase<EipPacket> {
     }
 
     @Override
-    protected boolean canDiscover() {
-        return true;
+    protected ConnectionBase<?> getConnection(Configuration configuration, TransportInstance<?> transportInstance, AuditLog auditLog) {
+        return new EipTcpConnection((EIPConfiguration) configuration, transportInstance, auditLog);
     }
 
     @Override
-    protected ProtocolStackConfigurer<EipPacket> getStackConfigurer() {
-        return SingleProtocolStackConfigurer.builder(EipPacket.class, io -> EipPacket.staticParse(io, true))
-            .withProtocol(EipProtocolLogic.class)
-            .withPacketSizeEstimator(ByteLengthEstimator.class)
-            .withCorruptPacketRemover(CorruptPackageCleaner.class)
-            .byteOrder(this.configuration.getByteOrder())
-            .build();
-    }
-
-    @Override
-    public PlcConnection getConnection(String connectionString) throws PlcConnectionException {
-        // Split up the connection string into its individual segments.
-        Matcher matcher = URI_PATTERN.matcher(connectionString);
-        if (!matcher.matches()) {
-            throw new PlcConnectionException(
-                "Connection string doesn't match the format '{protocol-code}:({transport-code})?//{transport-address}(?{parameter-string)?'");
-        }
-        final String protocolCode = matcher.group("protocolCode");
-        final String transportCode = (matcher.group("transportCode") != null) ?
-            matcher.group("transportCode") : getDefaultTransportCode().get();
-        final String transportConfig = matcher.group("transportConfig");
-        final String paramString = matcher.group("paramString");
-
-        // Check if the protocol code matches this driver.
-        if (!protocolCode.equals(getProtocolCode())) {
-            // Actually this shouldn't happen as the DriverManager should have not used this driver in the first place.
-            throw new PlcConnectionException(
-                "This driver is not suited to handle this connection string");
-        }
-
-        // Create the configuration object.
-        configuration = (EIPConfiguration) new ConfigurationFactory().createConfiguration(
-            getConfigurationClass(), protocolCode, transportCode, transportConfig, paramString);
-        if (configuration == null) {
-            throw new PlcConnectionException("Unsupported configuration");
-        }
-
-        // Try to find transport in order to create a communication channel.
-        Transport transport = null;
-        ServiceLoader<Transport> transportLoader = ServiceLoader.load(
-            Transport.class, Thread.currentThread().getContextClassLoader());
-        for (Transport curTransport : transportLoader) {
-            if (curTransport.getTransportCode().equals(transportCode)) {
-                transport = curTransport;
-                break;
-            }
-        }
-        if (transport == null) {
-            throw new PlcConnectionException("Unsupported transport " + transportCode);
-        }
-
-        // Inject the configuration into the transport.
-        configure(configuration, transport);
-
-        // Create an instance of the communication channel which the driver should use.
-        ChannelFactory channelFactory = transport.createChannelFactory(transportConfig);
-        if(channelFactory == null) {
-            throw new PlcConnectionException("Unable to get channel factory from url " + transportConfig);
-        }
-        configure(configuration, channelFactory);
-
-        // Give drivers the option to customize the channel.
-        initializePipeline(channelFactory);
-
-        // Make the "fire discover event" overridable via system property.
-        boolean fireDiscoverEvent = fireDiscoverEvent();
-        if(System.getProperty(PROPERTY_PLC4X_FORCE_FIRE_DISCOVER_EVENT) != null) {
-            fireDiscoverEvent = Boolean.parseBoolean(System.getProperty(PROPERTY_PLC4X_FORCE_FIRE_DISCOVER_EVENT));
-        }
-
-        // Make the "await setup complete" overridable via system property.
-        boolean awaitSetupComplete = awaitSetupComplete();
-        if(System.getProperty(PROPERTY_PLC4X_FORCE_AWAIT_SETUP_COMPLETE) != null) {
-            awaitSetupComplete = Boolean.parseBoolean(System.getProperty(PROPERTY_PLC4X_FORCE_AWAIT_SETUP_COMPLETE));
-        }
-
-        // Make the "await disconnect complete" overridable via system property.
-        boolean awaitDisconnectComplete = awaitDisconnectComplete();
-        if(System.getProperty(PROPERTY_PLC4X_FORCE_AWAIT_DISCONNECT_COMPLETE) != null) {
-            awaitDisconnectComplete = Boolean.parseBoolean(System.getProperty(PROPERTY_PLC4X_FORCE_AWAIT_DISCONNECT_COMPLETE));
-        }
-
-        // Make the "await disconnect complete" overridable via system property.
-        boolean awaitDiscoverComplete = awaitDiscoverComplete();
-        if(System.getProperty(PROPERTY_PLC4X_FORCE_AWAIT_DISCOVER_COMPLETE) != null) {
-            awaitDiscoverComplete = Boolean.parseBoolean(System.getProperty(PROPERTY_PLC4X_FORCE_AWAIT_DISCOVER_COMPLETE));
-        }
-
-        return new DefaultNettyPlcConnection(
-            canPing(), canRead(), canWrite(), canSubscribe(), canBrowse(),
-            getValueHandler(),
-            configuration,
-            channelFactory,
-            fireDiscoverEvent,
-            awaitSetupComplete,
-            awaitDisconnectComplete,
-            awaitDiscoverComplete,
-            getStackConfigurer(transport),
-            getOptimizer(),
-            null);
-    }
-
-    /** Estimate the Length of a Packet */
-    public static class ByteLengthEstimator implements ToIntFunction<ByteBuf>, HasConfiguration<EIPConfiguration> {
-        private EIPConfiguration configuration;
-
-        @Override
-        public void setConfiguration(EIPConfiguration configuration) {
-            this.configuration = configuration;
-        }
-
-        @Override
-        public int applyAsInt(ByteBuf byteBuf) {
-            if (byteBuf.readableBytes() >= 4) {
-                //Second byte for the size and then add the header size 24
-                if (configuration.getByteOrder() == ByteOrder.BIG_ENDIAN) {
-                    return byteBuf.getUnsignedShort(byteBuf.readerIndex() + 2) + 24;
-                } else {
-                    return byteBuf.getUnsignedShortLE(byteBuf.readerIndex() + 2) + 24;
-                }
-            }
-            return -1;
-        }
-    }
-
-     /**Consumes all Bytes till another Magic Byte is found */
-    public static class CorruptPackageCleaner implements Consumer<ByteBuf> {
-        @Override
-        public void accept(ByteBuf byteBuf) {
-            while (byteBuf.getUnsignedByte(0) != 0x00) {
-                // Just consume the bytes till the next possible start position.
-                byteBuf.readByte();
-            }
-        }
-    }
-
-    @Override
-    public EipTag prepareTag(String query){
-        return EipTag.of(query);
+    public EipTag prepareTag(String tagAddress) {
+        return EipTag.of(tagAddress);
     }
 
 }
